--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,24 @@
 	<meta charset="utf-8" />
     <meta property="og:type" content="website">
 	<meta property="og:title" content="Daybreak is the pefect way to share your Perfect Day.">
-    <meta property="og:description" content="Use Daybreak discover other people's favorite days and favorite places, and share your perfect day.">
+    <meta property="og:description" content="Use Daybreak to discover favorite days and favorite places, and share your perfect day.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css" />
 	<script src="js/modernizr.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
-	<title>Daybreak - Share and Find the Perfect Day</title>
+	<title>Daybreak - Share and Find Your Perfect Day</title>
 	<style>#map-canvas{width:100%;height:100%;border:1px solid red;}</style>
 </head>
 
 <body>
-
 <div data-ng-controller= "userController as User">
  
-
 	<nav class = 'navbar navbar-default'>
+
+		<div id = "titleGraphic">
+			Daybreak
+		</div>
+
 	  	<div class="container">
 			<ul class='nav navbar-nav'>
 
@@ -27,25 +30,21 @@
 						Home
 						</div></a></li>
 
-				<li><a  
-			 			data-ng-show ="User.userState==='loggedIn'"
-			 			data-ng-click="User.signOut();userViewSwitch='None' "
-		 		  		> 
+				<li><a  data-ng-show ="User.userState==='loggedIn'"
+			 			data-ng-click="User.signOut();userViewSwitch='None' " > 
 		 		  		Logout
 		 		  		</a></li>
 
-				<li><a 	
-				  		data-ng-model="userViewSwitch"
+				<li><a 	data-ng-model="userViewSwitch"
 				  		data-ng-show="User.userState==='loggedOut'"
 				  		data-ng-click="userViewSwitch='Log' ">
 				  		Login
 				  		</a></li>	
 
-				<li><a><div 	
-			  	  		data-ng-show="User.userState==='loggedOut'"
+				<li><a	data-ng-show="User.userState==='loggedOut'"
 			  	  		data-ng-click="userViewSwitch ='Reg' "> 
 			  	  		Register 
-			  	  		</div></a></li>
+			  	  		</a></li>
 
 				<li><a><div 	
 			   	  		data-ng-model="User"  
@@ -53,47 +52,36 @@
 			  			Welcome: {{User.username}}
 				  		</div></a></li>
 
-				<li><a><div   
-			  	  		data-ng-show="User.userState==='loggedIn'"
+				<li><a  data-ng-show="User.userState==='loggedIn'"
 			  	  		data-ng-click="userViewSwitch ='Myaccount' " >
 			  			My Account
-				  		</div></a></li>
-
+				  		</a></li>
 		   	</ul>
-
-<!-- 			<div ng-switch on="userViewSwitch"> 
-			  	<div ng-switch-when='Reset' > 
-			  		User Clicked Reset 
-			  	</div>
-			</div> -->
-
 	  	</div>
 	</nav>
 
 	<div class = 'surround'>	
 		<div class = 'userContainer' 
-				data-ng-show=" (User.userState==='loggedOut' && 
-				  (userViewSwitch === 'Log' || userViewSwitch === 'Reg' || userViewSwitch === 'Reset'))
-				  || 
-				  (User.userState==='loggedIn' &&
-					userViewSwitch==='Myaccount' )">
-
-<!-- 					userViewSwitch is {{userViewSwitch}}
-					<br>
-					User.userState is {{User.userState}} -->
-
-			<!-- <div id='login' 
-			  data-ng-show="User.userState === 'loggedOut' " 
-			  data-ng-if= "userViewSwitch==='Log' "  > -->
-
+				data-ng-show=" 
+					(User.userState ==='loggedOut' && 
+					(userViewSwitch === 'Log' || 
+					 userViewSwitch === 'Reg'  || 
+					 userViewSwitch === 'Reset' ) )
+					|| 
+				 	(User.userState ==='loggedIn' &&
+					 userViewSwitch ==='Myaccount')">
 
 			<div id='login' ng-switch on="userViewSwitch">
 				<div ng-switch-when='Log' >
-					<form data-ng-submit="User.login() ">
+					<form data-ng-submit="User.login() "
+						  >
+						
 						<div class="form group">
 							<label>Username</label>
-							<input class= "form-control" type="text" ng-model="User.username">
+							<input class= "form-control" type="text" 
+							ng-model="User.username">
 						</div>
+
 						<div class="form group">
 							<label>Password</label>
 							<input class= "form-control" type="password" ng-model="User.password">
@@ -105,7 +93,8 @@
 				</div>
 
 				<!-- Must be outside of ng-switch-when! -->
-				<div data-ng-show="userViewSwitch==='Log' ">
+				<div class='closeModal' 
+					 data-ng-show="userViewSwitch==='Log' ">
  					<a 
 	 					data-ng-click="userViewSwitch='Reset' ">
 						Reset Password
@@ -116,11 +105,23 @@
 		   	<div id='register'
 		   			ng-switch on='userViewSwitch'>
 		   		<div ng-switch-when='Reg' >
-					<form data-ng-submit="User.registerUser()">
+					<form 
+						data-ng-submit="User.registerValidUser()"
+						name = "regForm" 
+						novalidate>
+
 						<div class="form group">
+
 							<label>Username</label>
-							<input class= "form-control" type="text" ng-model="User.username">
+							<input class= "form-control" 
+							type="text"
+							data-ng-blur="User.checkUsername()" 
+							data-ng-model="User.username">
+
 						</div>
+
+
+
 						<div class="form group">
 							<label>Password</label>
 							<input class= "form-control" type="password" ng-model="User.password">
@@ -139,11 +140,8 @@
 				</div>
 		 	</div>
 		 
-		 
 			<div id='resetPassword' ng-switch on='userViewSwitch'>
 				<div ng-switch-when='Reset'>
-			 				<!-- <div id='resetPassword' data-ng-show ="User.userState === 'loggedOut' "data-ng-if="userViewSwitch==='Reset' "> -->
-
 					<form data-ng-submit="User.resetPassword()">	
 						<div class="form group">
 							<label>Forgot Password? Enter E-Mail</label>
@@ -153,15 +151,8 @@
 						<input class="btn btn-success btn-sm btn-block" type="submit" value="Send Password Reset Link"></input>
 					</form>
 					<p></p>
-
-
 				</div>
 		 	</div>
-
-<!-- 
-	   		<div id='about' 
-	   			data-ng-show="User.userState==='loggedIn' " 
-	   			data-ng-if="userViewSwitch==='myaccount' "  > -->
 
 	   		<div id='about' ng-switch on="userViewSwitch">
 				<div ng-switch-when='Myaccount' >
@@ -173,18 +164,27 @@
 							data-ng-show="User.userState==='loggedIn'" 
 							data-ng-if="userViewSwitch==='Myaccount' " >
 
-				  			<p>Name: {{User.username}}</p>
-				  			<p>Email: {{User.email}}</p>
-				  			<p>Joined:  {{User.createDate}}</p>
-				  			<p>About You: {{User.userAbout}}</p>
+				  			<div class="userProfile">
+				  			<li>Name: 		{{User.username}}</li>
+				  			<li>Email: 		{{User.email}}</li>
+				  			<li>Joined: 	{{User.createDate}}</li>
+				  			<li>About You: 	{{User.userAbout}}</li>
+				  			
+				  			</div>
 				  			<p> </p>
-				  			<p>Close </p>
-						</div>
+ 						</div>
 					</div>
-			  	</div>  	 
+			  	</div>  
+
+				<!-- Must be outside of ng-switch-when! -->
+				<div class='closeModal' 
+					data-ng-show="userViewSwitch==='Myaccount' ">
+ 					<a 
+	 					data-ng-click="userViewSwitch='None' ">
+						Close Account Profile
+					</a>
+				</div>
 			</div>   <!-- close about modal -->	 
-
-
 
 		</div>  <!-- //close class=userContainer -->
 	</div>	<!-- close surround -->
@@ -279,10 +279,22 @@
  
 </div>
 
+
+
+
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
+
+<script>
+// var app = angular.module('app', []);
+// app.controller('validateCtrl', function($scope) {
+//     $scope.user = 'John Doe';
+//     $scope.email = 'john.doe@gmail.com';
+// });
+</script>
+
 
 <!-- Latest compiled and minified CSS -->
 
