--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 			   	  		data-ng-model="User"  
 			  	  		data-ng-show="User.userState==='loggedIn'" >
 			  			Welcome: {{User.username}}
+ 
 				  		</div></a></li>
 
 				<li><a  data-ng-show="User.userState==='loggedIn'"
@@ -73,9 +74,8 @@
 					(User.userState ==='loggedOut' && 
 					(userViewSwitch === 'Log'      || 
 					 userViewSwitch === 'Reg'      || 
-					 userViewSwitch === 'Reset' ) )
-					|| 
-				 	(User.userState ==='loggedIn' &&
+					 userViewSwitch === 'Reset' ) )|| 
+				 	(User.userState ==='loggedIn'  &&
 					 userViewSwitch ==='Myaccount')">
 
 
@@ -132,7 +132,7 @@
  							data-ng-model="User.username"
 
  							placeholder="5 character minimum. Public."
- 							>					
+ 							required>					
 						</div>
  
 							<div class="errMsg" 
@@ -153,7 +153,8 @@
 							type="text"
 							data-ng-blur="User.checktheemail()" 
 							data-ng-model="User.email"
-							placeholder="Required for password recovery.  Private.">
+							placeholder="Required for password recovery.  Private."
+							required>
 						</div>
 
 						<div class="errMsg" 
@@ -170,7 +171,8 @@
 							type="password" 
 							name='password'
 							data-ng-model="User.password"
-							placeholder="Enter password. Secret.">
+							placeholder="Enter password. Secret."
+							required>
 						</div>
 
 						<div class="form group">
@@ -180,7 +182,8 @@
 							name='passwordConfirm'
 							type="password" 
 							data-ng-model="User.passwordConfirm"
-							placeholder="Reenter password.">
+							placeholder="Reenter password."
+							required>
 						</div>
 
 
@@ -193,13 +196,13 @@
 						<div >
 							<p>username is: 		{{User.username}}</p>
 							<p>email is   : 		{{User.email}}</p>
+							<p>password is: 		{{User.password}}</p>
 							<p>uniqueUserName is: 	{{User.uniqueUserName}}</p>
 							<p>uniqueEmail is:		{{User.uniqueEmail}}</p>
 							<p> regForm.$invalid 	{{regForm.$invalid}} </p>
 						</div> -->
 
-						<p> </p>
-						<p> </p>
+						 
 
 						<input 
 						
@@ -210,7 +213,7 @@
 						!User.uniqueEmail	  ||
 						(User.password != User.passwordConfirm)"
 
-
+ 
 						class="btn btn-success btn-sm btn-block" 
 						type="submit" 
 						value="Register Now">
@@ -220,22 +223,31 @@
 				</div>
 		 	</div>
 		 
-			<div id='resetPassword' ng-switch on='userViewSwitch'>
-				<div ng-switch-when='Reset'>
+			<div id='resetPassword' 
+				data-ng-switch on='userViewSwitch'
+				data-ng-submit="User.resetPassword()"
+				>
+
+				<div data-ng-switch-when='Reset'>
 					<form 
 					data-ng-submit="User.resetPassword()">	
 						<div class="form group">
 							<label>Forgot Password? Enter E-Mail</label>
 							<input class= "form-control" 
 							type="text" 
-							ng-model="User.email">
+							data-ng-model="User.email">
 						</div>
-						 <p></p>
-						<input class="btn btn-success btn-sm btn-block" type="submit" value="Send Password Reset Link"></input>
+						<input 
+						class="btn btn-success btn-sm btn-block" 
+						type="submit" 
+						value="Send Password Reset Link">
+						</input>
 					</form>
 					<p></p>
 				</div>
 		 	</div>
+
+
 
 	   		<div id='about' ng-switch on="userViewSwitch">
 				<div ng-switch-when='Myaccount' >
@@ -260,7 +272,6 @@
 			  	</div>  
 
  
-
  				<div class='closeModal' 
 					data-ng-show="userViewSwitch==='Myaccount' ">
  					<a 
@@ -271,9 +282,6 @@
 			</div>   
 		</div>   
 	</div>	 
-
-
-
 </div> <!-- close userController -->
 
 
