--- a/public/index.html
+++ b/public/index.html
@@ -286,14 +286,13 @@
 
 <div class="container-fluid">
 
-<div class="col-md-6" style="border:2px solid blue;">
+<div class="col-md-6">
 <h1>My Day</h1>
 <p>Share your adventure</p>
 
 <section>
 <div class="form-group" data-ng-controller="dayController as Day">
 	<form data-ng-submit="Day.addDay()">
-	<input type="hidden" data-ng-model="Day.username" value="joey">
 	<input type="text" class="form-control" data-ng-model="Day.dayName" placeholder="Give your day a name">
 	
 	<select class="form-control" data-ng-model="Day.dayGroup" placeholder="Who is in your group?">
@@ -327,9 +326,11 @@
 </div> <!-- END DAY CONTROLLER -->
 </section>
 </div>
-	<aside class="pull-right col-md-5" style="border:2px solid red;">
+	<aside class="pull-right col-md-5">
+		<div class="locList">
 		<h3>Location list</h3>
 		<location-list></location-list>
+		</div>
 		<div id="map-canvas"></div>		
 	</aside>
 </div>
